--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,4 @@
-#GENOME_PATH : "/nfs/leia/research/flicek/user/fnc-odompipe/lce-collaboration/genome_metadata/genomes/"
-#BAM_PATH : "/nfs/leia/research/flicek/user/fnc-odompipe/lce-collaboration/repository/merged_alignments/alignments_20171018/"
-#BIN_PATH : "/hps/nobackup2/flicek/user/cander21/dojo/bin"
-#STRAIN : "c3h"
-#GENOME : "mus_musculus/C3H_HeJ_v1_S288C/C3H_HeJ_v1_S288C.fa"
-#WRK_DIR : "/hps/nobackup2/flicek/user/cander21/dojo/SM"
-samples : ["93133_N1", "89985_N1"]
+SAMPLE_LIST : "c3h_bam_name.txt"
+STRAIN : "c3h"
+VARIANTS : "/hps/nobackup2/flicek/user/cander21/lce20191105/geno/c3h.projectedFilteredMu.tab"
+
