--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
 SAMPLE_LIST : "c3h_bam_name.txt"
 STRAIN : "c3h"
 VARIANTS : "/hps/nobackup2/flicek/user/cander21/lce20191105/geno/c3h.projectedFilteredMu.tab"
-
+PATH_TO_BAM : "/nfs/leia/research/flicek/user/fnc-odompipe/lce-collaboration/repository/merged_alignments/alignments_20171018/"
+GENOME : "/nfs/leia/research/flicek/user/fnc-odompipe/lce-collaboration/genome_metadata/genomes/mus_musculus/C3H_HeJ_v1_S288C/C3H_HeJ_v1_S288C.fa"
