--- a/lce_ma.yml
+++ b/lce_ma.yml
@@ -10,26 +10,42 @@ dependencies:
   - blas=1.0=mkl
   - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2020.1.1=0
+  - cairo=1.14.12=h8948797_3
   - certifi=2020.4.5.1=py36_0
   - cffi=1.14.0=py36h2e261b9_0
   - chardet=3.0.4=py36_1003
   - cryptography=2.3.1=py36hc365091_0
   - curl=7.55.1=h78862de_4
   - docutils=0.16=py36_0
-  - dropbox=5.2.1=py36_0
+  - dropbox=9.4.0=py36_0
+  - expat=2.2.6=he6710b0_0
   - filechunkio=1.6=py36_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_1
+  - fribidi=1.0.5=h7b6447c_0
   - ftputil=3.2=py36_0
+  - glib=2.63.1=h5a9c865_0
+  - graphite2=1.3.13=h23475e2_0
+  - graphviz=2.40.1=h21bd128_2
+  - harfbuzz=1.8.8=hffaf4a1_0
+  - icu=58.2=h9c2bf20_1
   - idna=2.9=py_1
   - intel-openmp=2020.0=166
+  - jpeg=9b=h024ee3a_2
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc=7.2.0=h69d50b8_2
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
   - libsodium=1.0.16=h1bed415_0
   - libssh2=1.8.0=h9cfc8f7_4
   - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.1.0=h2733197_0
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.9=hea5a465_1
   - mkl=2020.0=166
   - mkl-service=2.3.0=py36he904b0f_0
   - mkl_fft=1.0.15=py36ha843d7b_0
@@ -39,9 +55,12 @@ dependencies:
   - numpy-base=1.18.1=py36hde5b4d6_1
   - openssl=1.0.2u=h7b6447c_0
   - pandas=1.0.3=py36h0573a6f_0
+  - pango=1.42.4=h049681c_0
   - paramiko=2.4.2=py36_0
   - pbgzip=2016.08.04=h2f06484_1
+  - pcre=8.43=he6710b0_0
   - pip=20.0.2=py36_1
+  - pixman=0.38.0=h7b6447c_0
   - psutil=5.7.0=py36h7b6447c_0
   - pyasn1=0.4.8=py_0
   - pycparser=2.20=py_0
@@ -59,7 +78,7 @@ dependencies:
   - setuptools=46.1.3=py36_0
   - six=1.14.0=py36_0
   - snakemake=3.13.3=py36_0
-  - sqlite=3.31.1=h7b6447c_0
+  - sqlite=3.31.1=h62c20be_1
   - tabix=0.2.6=ha92aebf_0
   - tk=8.6.8=hbc83047_0
   - urllib3=1.25.8=py36_0
@@ -68,5 +87,6 @@ dependencies:
   - xz=5.2.5=h7b6447c_0
   - yaml=0.1.7=had09818_2
   - zlib=1.2.11=h7b6447c_3
+  - zstd=1.3.7=h0b5b093_0
 prefix: /hps/nobackup2/flicek/user/cander21/bin/anaconda/envs/lce_ma
 
