cluster submission advanced - needs master. Added SCE sensitive calculations and plotting

--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,5 @@ STRAIN : "c3h"
 VARIANTS : "/hps/nobackup2/flicek/user/cander21/lce20191105/geno/c3h.projectedFilteredMu.tab"
 PATH_TO_BAM : "/nfs/leia/research/flicek/user/fnc-odompipe/lce-collaboration/repository/merged_alignments/alignments_20171018/"
 GENOME : "/nfs/leia/research/flicek/user/fnc-odompipe/lce-collaboration/genome_metadata/genomes/mus_musculus/C3H_HeJ_v1_S288C/C3H_HeJ_v1_S288C.fa"
+PATH_TO_FNOD : "/hps/nobackup2/flicek/user/mst/lce/nodules"
+PATH_TO_DRCR : "/hps/nobackup2/flicek/user/mst/lce/nodules"
